--- a/getting-started/prerequisites-installation/installation-bazel.mdx
+++ b/getting-started/prerequisites-installation/installation-bazel.mdx
@@ -1,87 +1,80 @@
 ---
-title: "Installation with Bazel"
-description: "Learn how to set up GoogleTest and GoogleMock with Bazel, including dependency declarations, expected workspace layout, and basic Bazel invocation patterns. Suitable for users working in modern, large-scale, or cloud-native C++ environments."
+title: "Installing with Bazel"
+description: "Demonstrates how to add GoogleTest and GoogleMock as dependencies in Bazel-based projects, including repository setup and relevant Bazel build rule configuration."
 ---
 
-# Installation with Bazel
+# Installing with Bazel
 
-Learn how to set up GoogleTest and GoogleMock with Bazel, including dependency declarations, expected workspace layout, and basic Bazel invocation patterns. This guide is tailored for users working in modern, large-scale, or cloud-native C++ development environments.
+This guide demonstrates how to add **GoogleTest** and **GoogleMock** as dependencies in Bazel-based projects. You will learn how to set up the Bazel workspace properly, configure Bazel build rules, and successfully build and run your first test binary using GoogleTest.
 
 ---
 
 ## 1. Prerequisites & System Requirements
 
-Before starting, ensure your environment meets these requirements:
+Before integrating GoogleTest with Bazel, ensure the following prerequisites are met:
 
-- **Operating System:** Linux, macOS, or Windows
-- **C++ Compiler:** Compatible compiler supporting at least **C++17** (for example, GCC 7+, Clang 5+, MSVC 2015+)
-- **Bazel:** Version **7.0** or later installed and configured
+- **Operating System**: Linux, macOS, or Windows
+- **C++ Compiler**: Supports at least C++17 (GCC, Clang, MSVC, etc.)
+- **Bazel**: Version 7.0 or higher installed and operational
 
-If Bazel is not installed, please follow the [Bazel installation guide](https://bazel.build/install).
+> For Bazel installation instructions, see the [Bazel installation guide](https://bazel.build/install).
 
 
-<Note>
-Although command examples mostly show Unix shell prompts (`$`), these commands work on Windows command prompt and PowerShell as well.
-</Note>
+## 2. Setup Your Bazel Workspace
 
----
-
-## 2. Setting Up Your Bazel Workspace
-
-A Bazel workspace is the root directory to manage your source files and dependencies.
+A Bazel workspace is a directory where your source files and build files reside.
 
 ### Step 1: Create a workspace directory
 
-Open your terminal and run the following commands:
+Open your terminal and run:
 
 ```bash
-$ mkdir my_workspace && cd my_workspace
+mkdir my_workspace && cd my_workspace
 ```
 
-### Step 2: Declare GoogleTest dependency
+### Step 2: Define the `MODULE.bazel` file
 
-In your workspace root, create a file named `MODULE.bazel`. This file declares external dependencies for Bazel to consume.
-
-Add the following content to `MODULE.bazel`:
+To consume GoogleTest via Bazel Central Registry, create a file named `MODULE.bazel` in your workspace root with the following content:
 
 ```python
 # MODULE.bazel
 
-# Declare GoogleTest dependency using the Bazel Central Registry.
+# Specify the version of GoogleTest to use
 bazel_dep(name = "googletest", version = "1.17.0")
 ```
 
-You should update the version to the latest stable release available at [Bazel Central Registry for Googletest](https://registry.bazel.build/modules/googletest).
+This declares GoogleTest as a dependency for your Bazel project.
 
-This step ensures Bazel fetches GoogleTest for your builds automatically.
+<Tip>
+Always check the [Bazel Central Registry](https://registry.bazel.build/modules/googletest) for the most current GoogleTest version before declaring dependencies.
+</Tip>
 
----
 
-## 3. Creating Your First Test Binary
+## 3. Create Your First Test Binary
 
-Let’s walk through adding your first test source, configuring the build, and running it.
+With your workspace set up, you can now write and build a simple test.
 
-### Step 1: Write a basic test
+### Step 1: Write a basic test file
 
-Create a file named `hello_test.cc` in your workspace root and add this C++ code:
+Create a file named `hello_test.cc` in your workspace directory with the following content:
 
 ```cpp
 #include <gtest/gtest.h>
 
-// Basic example tests demonstrating assertions.
+// A simple test case demonstrating GoogleTest assertions.
 TEST(HelloTest, BasicAssertions) {
-  // Expect these two strings to be different.
+  // Expect that "hello" and "world" are not equal.
   EXPECT_STRNE("hello", "world");
-  // Expect numeric equality.
+  // Expect that 7 multiplied by 6 equals 42.
   EXPECT_EQ(7 * 6, 42);
 }
 ```
 
-### Step 2: Define the Bazel build rule
+### Step 2: Define the Bazel BUILD file
 
-Create a `BUILD` file in the workspace root with this content:
+In the same directory, create a file called `BUILD` with the following rules:
 
-```starlark
+```python
 cc_test(
     name = "hello_test",
     size = "small",
@@ -93,98 +86,112 @@ cc_test(
 )
 ```
 
-Explanation:
-
-- `cc_test`: Bazel rule to build and run C++ tests.
-- `name`: Target name.
-- `srcs`: Source files.
-- `deps`: GoogleTest libraries required to link the binary.
-
-Refer to the [Bazel C++ Tutorial](https://docs.bazel.build/versions/main/tutorial/cpp.html) for deeper details on `BUILD` file syntax.
+This declares a test binary named `hello_test` which links against GoogleTest and sets up the entry point with `gtest_main`.
 
 ### Step 3: Build and run the test
 
-Run the following command to build and execute the test:
+Execute the following command to build and run the test with C++17 standard:
 
 ```bash
-$ bazel test --cxxopt=-std=c++17 --test_output=all //:hello_test
+bazel test --cxxopt=-std=c++17 --test_output=all //:hello_test
 ```
 
-Flags explained:
+You should see output indicating the test was run and passed:
 
-- `--cxxopt=-std=c++17`: Ensures the C++17 standard is used.
-- `--test_output=all`: Prints all test output.
-- `//:hello_test`: Specifies the test target at workspace root.
-
-### Expected output snippet:
-
-```plaintext
+```
 Running main() from gmock_main.cc
 [==========] Running 1 test from 1 test suite.
-[----------] 1 test from HelloTest
 [ RUN      ] HelloTest.BasicAssertions
 [       OK ] HelloTest.BasicAssertions (0 ms)
-[----------] 1 test from HelloTest (0 ms total)
 [  PASSED  ] 1 test.
+
+//:hello_test                                                     PASSED in 0.1s
 ```
 
-Successful output confirms GoogleTest and Bazel are correctly set up and your test runs.
+<Note>
+Set the `--cxxopt` flag according to your compiler. For MSVC, use `--cxxopt=/std:c++17`.
+</Note>
 
----
 
-## 4. Best Practices and Tips
+## 4. Understanding Bazel Build Rule Configuration
 
-- **Keep your `MODULE.bazel` updated** with the latest GoogleTest versions to benefit from improvements and bug fixes.
-- **Specify the C++ standard consistently** across your project by passing `--cxxopt` flags or configuring your Bazel toolchain.
-- **Use `@googletest//:gtest_main` when you want to use GoogleTest’s built-in main() function** to simplify test binaries.
-- For advanced test definitions, learn more about Bazel's `BUILD` file syntax to refine your test rules.
+- **`cc_test` rule** creates an executable for your tests.
+- The `deps` attribute points to the GoogleTest libraries provided by the Bazel Central Registry with labels:
+  - `@googletest//:gtest` — GoogleTest core library
+  - `@googletest//:gtest_main` — Provides the `main()` function to launch tests
+- The `srcs` attribute lists source files compiled into this test binary.
 
----
+Get familiar with Bazel build specifications and `cc_test` rule in the [Bazel C++ Tutorial](https://docs.bazel.build/versions/main/tutorial/cpp.html).
 
-## 5. Troubleshooting Common Issues
+<Tip>
+If you want to use only GoogleTest as a library without the main function, depend on `@googletest//:gtest` alone and supply your own `main()` implementation.
+</Tip>
 
-### Issue: Bazel cannot find GoogleTest dependency
 
-- Verify your `MODULE.bazel` contains the correct `bazel_dep` entry.
-- Ensure internet access for Bazel to fetch dependencies.
-- Run `bazel clean --expunge` and retry to clear cached invalid downloads.
+## 5. Best Practices & Tips
 
-### Issue: Test fails to compile due to missing C++17 support
+- Always specify the C++ standard (`--cxxopt=-std=c++17` or equivalent) to avoid compatibility issues.
+- Use a recent Bazel version (7.0+) to ensure compatibility with the module system and dependency management.
+- Keep `MODULE.bazel` and workspace dependencies in sync with the supported versions listed in the Bazel Central Registry.
+- Check the Bazel and GoogleTest documentation for platform-specific compiler flags, especially on Windows.
 
-- Confirm your compiler version supports C++17.
-- Use `--cxxopt=-std=c++17` flag explicitly in your Bazel commands.
-- On MSVC, replace with `--cxxopt=/std:c++17`.
 
-### Issue: Test output is empty or not visible
+## 6. Troubleshooting Common Issues
 
-- Add `--test_output=all` to Bazel test commands.
+<AccordionGroup title="Common Bazel Integration Issues">
+<Accordion title="Build fails due to C++ standard mismatch">
+Ensure you pass the correct compiler flag for C++17 in the Bazel test command:
 
-### Issue: Linking errors related to pthread
-
-- Most Linux/macOS environments require linking with pthread.
-- Bazel normally handles this via `@googletest` configuration, but check your compiler/linker setup if issues persist.
-
----
-
-## 6. Next Steps
-
-- Explore the [GoogleTest Primer](primer.md) to learn core testing concepts and advanced assertions.
-- Check out [Writing and Running Your First Test](../setup-usage-validation/writing-first-test.md) for detailed test authoring.
-- Integrate GoogleMock for mock object support; see the GoogleMock documentation.
-
----
-
-## Summary Diagram of the Workflow
-
-```mermaid
-flowchart TD
-  A[Create Workspace Directory] --> B[Add MODULE.bazel with googletest dependency]
-  B --> C[Add Test Source (hello_test.cc)]
-  C --> D[Create BUILD file with cc_test rule]
-  D --> E[Run bazel test to build and execute]
-  E --> F{Test Passed?}
-  F -->|Yes| G[Success: Start writing more tests]
-  F -->|No| H[Troubleshoot setup and build issues]
+```bash
+bazel test --cxxopt=-std=c++17 //:hello_test
 ```
 
+For MSVC, use:
+
+```bash
+bazel test --cxxopt=/std:c++17 //:hello_test
+```
+
+Missing this often leads to compilation errors or runtime failures.
+</Accordion>
+
+<Accordion title="Cannot find GoogleTest dependencies">
+Verify that your `MODULE.bazel` includes the correct `bazel_dep` statement.
+
+Make sure you are using Bazel 7.0 or newer, as prior versions do not support the Bazel Central Registry dependency declaration.
+
+Also, ensure your `WORKSPACE` or module files do not conflict or redundantly declare GoogleTest dependencies.
+</Accordion>
+
+<Accordion title="Tests do not run or no output shown">
+Use the `--test_output=all` flag when running tests to see complete output and diagnose failures:
+
+```bash
+bazel test --test_output=all //:hello_test
+```
+
+If tests still do not run, double-check that your `cc_test` rule and source files are correctly specified.
+</Accordion>
+</AccordionGroup>
+
+
+## 7. Next Steps
+
+- Explore writing your own tests using the [GoogleTest Primer guide](primer.md).
+- Learn about advanced mocking techniques in [Writing Your First Mock](../guides/getting-started/writing-your-first-mock).
+- Dive deeper into Bazel integration best practices in [Integrating with Build Systems](../guides/integration-and-best-practices/integrating-with-build-systems).
+
+
 ---
+
+By following this guide, you have successfully added GoogleTest and GoogleMock to your Bazel project, built a test binary, and executed your first test. Continue expanding your tests and integrating them into your development workflow with confidence.
+
+---
+
+## Related Documentation
+
+- [Quickstart: Building with Bazel](docs/quickstart-bazel.md)
+- [Bazel C++ Tutorial](https://docs.bazel.build/versions/main/tutorial/cpp.html)
+- [Supported Platforms](platforms.md)
+- [Installing with CMake](installation-cmake)
+- [Writing Your First Test](writing-basic-test)
