--- a/guides/getting-started/quickstart-installation.mdx
+++ b/guides/getting-started/quickstart-installation.mdx
@@ -1,237 +1,310 @@
 ---
-title: "Installing and Setting Up GoogleTest"
-description: "Learn how to add GoogleTest and GoogleMock to your C++ project. This guide covers recommended installation methods, including using CMake or Bazel, and provides troubleshooting tips for common platform-specific setup issues."
+title: "Quickstart & Installation"
+description: "Learn how to install GoogleTest and GoogleMock and integrate them into your build system (CMake or Bazel). Covers basic configuration steps and recommended practices for initial project setup."
 ---
 
-# Installing and Setting Up GoogleTest
+# Quickstart & Installation Guide
 
-Learn how to add GoogleTest and GoogleMock to your C++ project. This guide covers recommended installation methods, including using CMake or Bazel, and provides troubleshooting tips for common platform-specific setup issues.
+## Workflow Overview
 
----
-
-## 1. Workflow Overview
-
-### What This Guide Helps You Accomplish
-This guide walks you through integrating GoogleTest and GoogleMock into your C++ projects. Whether you're starting fresh or adding testing to an existing build system, you'll learn practical ways to install, configure, and validate GoogleTest using the two most common build systems — CMake and Bazel.
+This guide helps you swiftly install GoogleTest and GoogleMock, integrate them into your C++ project build system (using either CMake or Bazel), and get your first test binary running.
 
 ### Prerequisites
-- Familiarity with C++ development and basic understanding of build systems (CMake or Bazel).
-- Installed and working C++ compiler that supports C++17 (GCC 7+, Clang 5+, MSVC 2017+).
-- Internet connectivity to fetch source from GitHub.
-- Basic command-line usage skills.
+
+- C++17-compatible compiler installed on a supported OS (Linux, macOS, Windows).
+- Basic familiarity with CMake or Bazel build systems.
+- Installed CMake (version 3.14 or higher) for CMake users.
+- Access to a terminal or command line interface.
 
 ### Expected Outcome
-- Successfully cloned and built GoogleTest (and GoogleMock) into your project.
-- Able to link GoogleTest libraries in your build system.
-- Validated installation by compiling and running a simple test binary.
+
+By following this guide, you will:
+- Successfully download and build GoogleTest and GoogleMock.
+- Configure your project’s build system to include GoogleTest and GoogleMock.
+- Compile and run a basic test executable using GoogleTest’s main() functions.
 
 ### Time Estimate
-Approximately 15-30 minutes to complete if your environment is prepared.
+
+Approximately 15-30 minutes, depending on environment setup.
 
 ### Difficulty Level
-Beginner to Intermediate — assumes you know how to build C++ projects but are new to GoogleTest integration.
+
+Beginner to Intermediate.
 
 ---
 
-## 2. Step-by-Step Instructions
+## Step-by-Step Installation and Integration
 
-### A. Installing GoogleTest with CMake
+### 1. Installing GoogleTest and GoogleMock with CMake
 
-1. **Clone the GoogleTest Repository**
-   ```sh
-   git clone https://github.com/google/googletest.git -b v1.17.0
-   cd googletest
-   ```
-   _This fetches the stable release 1.17.0 with both GoogleTest and GoogleMock._
+GoogleTest and GoogleMock are bundled together. You can build them both simply by using the provided CMake scripts.
 
-2. **Create a Build Directory**
-   ```sh
-   mkdir build
-   cd build
-   ```
-   _Keeps build artifacts separate from source._
-
-3. **Configure the Build with CMake**
-   For both GoogleTest and GoogleMock:
-   ```sh
-   cmake ..
-   ```
-
-   To build only GoogleTest (no GoogleMock):
-   ```sh
-   cmake .. -DBUILD_GMOCK=OFF
-   ```
-
-4. **Build the Libraries**
-   On Linux/macOS:
-   ```sh
-   make
-   ```
-   On Windows with Visual Studio:
-   - Open the generated `gtest.sln` solution file.
-   - Build the solution.
-
-5. **(Optional) Install GoogleTest for System-wide Use**
-   ```sh
-   sudo make install
-   ```
-   _Installs GoogleTest headers and libraries to `/usr/local` by default._
-
-6. **Integrate with Your Project**
-   - Use `find_package(GTest REQUIRED)` in your `CMakeLists.txt` if installed.
-   - Or, include GoogleTest as a subdirectory and link against `gtest` or `gtest_main` targets.
-
-7. **Example CMakeLists.txt Snippet:**
-   ```cmake
-   find_package(GTest REQUIRED)
-   enable_testing()
-
-   add_executable(my_tests test.cpp)
-   target_link_libraries(my_tests GTest::gtest_main)
-   add_test(NAME MyTest COMMAND my_tests)
-   ```
-
-8. **Run Your Tests**
-   ```sh
-   ctest
-   ```
-   or execute the test binary directly.
-
-
-### B. Installing GoogleTest with Bazel
-
-1. **Add GoogleTest as an External Dependency**
-   In your `WORKSPACE` file, add:
-   ```python
-   http_archive(
-       name = "com_google_googletest",
-       url = "https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip",
-       strip_prefix = "googletest-5376968f6948923e2411081fd9372e71a59d8e77",
-   )
-   ```
-
-2. **Reference GoogleTest in your BUILD files**
-   Define your test target by linking against GoogleTest libraries:
-   ```python
-   cc_test(
-       name = "my_test",
-       srcs = ["my_test.cc"],
-       deps = ["@com_google_googletest//:gtest_main"],
-   )
-   ```
-
-3. **Build and Run Your Tests with Bazel**
-   ```sh
-   bazel test //path/to:my_test
-   ```
-
-4. **Enable GoogleMock Support**
-   Use the `@com_google_googletest//:gmock_main` target instead if you want to utilize mocks.
-
----
-
-## 3. Practical Examples
-
-### Minimal CMake Project with GoogleTest
-```cmake
-cmake_minimum_required(VERSION 3.14)
-project(MyProject)
-
-set(CMAKE_CXX_STANDARD 17)
-
-# Fetch GoogleTest during configure step
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/v1.17.0.zip
-)
-FetchContent_MakeAvailable(googletest)
-
-add_executable(test_sample test_sample.cpp)
-target_link_libraries(test_sample gtest_main)
-include(GoogleTest)
-gtest_discover_tests(test_sample)
-```
-
-### Sample test_sample.cpp
-```cpp
-#include <gtest/gtest.h>
-
-TEST(SampleTest, BasicAssertions) {
-  EXPECT_EQ(1 + 1, 2);
-}
-```
-
-Build and run:
-```sh
-mkdir build && cd build
-cmake ..
-make
-./test_sample
-```
-
----
-
-## 4. Troubleshooting & Best Practices
-
-### Common Issues
-
-- **Compiler Version Errors:** Ensure your compiler supports C++17 as it is mandatory.
-- **Linker Errors:** Confirm that you link against `gtest_main` or `gmock_main` for the main function.
-- **Threading Linker Flags:** On some systems, you may need to explicitly link pthread.
-- **Visual Studio Runtime Mismatches:** Use the `gtest_force_shared_crt` CMake option on Windows to align runtimes.
-
-### Tips
-
-- Use CMake's `FetchContent` to simplify dependency management.
-- When embedding GoogleTest source in your project, keep it up to date to benefit from fixes.
-- For CI integration, ensure GoogleTest binaries are built as part of your pipeline.
-- Use `ctest` to run your tests consistently across environments.
-
-### Platform-specific Considerations
-
-- Windows users: Opening the generated Visual Studio solution file enables native development.
-- Mac users: Xcode projects can be generated with `cmake -G Xcode ..`.
-- Embedded platforms (ESP8266, ESP32): See special `setup` and `loop` initialization methods in GoogleMock.
-
----
-
-## 5. Next Steps & Additional Resources
-
-- **Writing Your First Test:** [Write Your First Test Guide](/getting_started/first_test_and_validation/create_first_test)
-- **Running and Validating Tests:** [Test Execution and Validation](/getting_started/first_test_and_validation/run_and_validate)
-- **Integration with Build Systems:** [Integration with CMake, Bazel, and CI](/overview/integration-feature-overview/integration-build-systems)
-- **Troubleshooting Setup Issues:** [Troubleshooting Setup](/getting_started/first_test_and_validation/troubleshooting_setup)
-- **Advanced Mocking:** Explore [GoogleMock Overview](https://github.com/google/googletest/tree/main/googlemock)
-
-<Tip>
-For a seamless setup, always keep your build system and compiler versions compatible and consult platform-specific notes.
-</Tip>
-
-<Note>
-Make sure to check that the GoogleTest and GoogleMock versions used are compatible with each other to avoid unexpected failures.
-</Note>
-
----
-
-## 6. Quick Reference Commands
+#### a. Clone the Repository
 
 ```sh
-# Clone GoogleTest
 git clone https://github.com/google/googletest.git -b v1.17.0
+cd googletest
+```
 
-# CMake build
-mkdir build && cd build
+#### b. Create a Build Directory
+
+```sh
+mkdir build
+cd build
+```
+
+#### c. Generate Build Scripts
+
+- To build both GoogleTest and GoogleMock (default):
+
+```sh
 cmake ..
+```
+
+- To build only GoogleTest (exclude GoogleMock):
+
+```sh
+cmake .. -DBUILD_GMOCK=OFF
+```
+
+#### d. Build the Library
+
+On Unix-like systems:
+
+```sh
 make
+```
 
-# Run tests
-ctest
+On Windows, open the generated solution file in Visual Studio and build.
 
-# Bazel example
+#### e. (Optional) Install GoogleTest System-Wide
+
+```sh
+sudo make install
+```
+
+> This places headers and libraries in system directories (e.g., `/usr/local/include` and `/usr/local/lib`). Requires administrator privileges.
+
+---
+
+### 2. Integrating GoogleTest into Your Existing CMake Project
+
+There are two main approaches:
+
+#### a. Using Installed GoogleTest Libraries
+
+If you installed GoogleTest system-wide or have it available, add to your `CMakeLists.txt`:
+
+```cmake
+find_package(GTest CONFIG REQUIRED)
+
+add_executable(my_test_executable my_test.cc)
+target_link_libraries(my_test_executable GTest::gtest_main)
+
+include(GoogleTest)
+gtest_discover_tests(my_test_executable)
+```
+
+This relies on your system finding GTest and linking with `gtest_main`, providing a ready-to-use `main()`.
+
+#### b. Building GoogleTest as a Subdirectory
+
+If you prefer seamless build integration with your project (recommended for consistent compiler flags and portability):
+
+1. Download or clone GoogleTest source inside your project (or add as git submodule).
+2. In your root `CMakeLists.txt`:
+
+```cmake
+add_subdirectory(path/to/googletest)
+
+add_executable(my_test_executable my_test.cc)
+target_link_libraries(my_test_executable gtest_main)
+
+include(GoogleTest)
+gtest_discover_tests(my_test_executable)
+```
+
+This approach ensures GoogleTest compiles with the same settings as your code.
+
+---
+
+### 3. Installing and Integrating GoogleTest and GoogleMock with Bazel
+
+#### a. Setup WORKSPACE
+
+Declare GoogleTest and GoogleMock dependencies by adding to your `WORKSPACE` file:
+
+```python
+load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
+
+http_archive(
+    name = "com_google_googletest",
+    urls = ["https://github.com/google/googletest/archive/release-1.17.0.tar.gz"],
+    strip_prefix = "googletest-release-1.17.0",
+    sha256 = "4a2743dca9f4ca00424b5aab0d986dd84de3a352e87a5d65d36981d87fc56621",
+)
+```
+
+Update the URL and hash to the desired version.
+
+#### b. Declare Tests in BUILD Files
+
+Within your Bazel `BUILD` file, use `cc_test` to define your test:
+
+```python
+cc_test(
+    name = "my_test",
+    srcs = ["my_test.cc"],
+    deps = ["@com_google_googletest//:gmock_main"],
+)
+```
+
+Here, linking against `gmock_main` provides the `main()` function for both GoogleTest and GoogleMock.
+
+#### c. Building and Running
+
+```sh
 bazel test //path/to:my_test
 ```
 
+
 ---
 
-For more detailed options, consult the official [GoogleTest GitHub repository](https://github.com/google/googletest) and the [GoogleMock documentation](https://google.github.io/googletest/gmock_for_dummies.html).
+### 4. Writing and Running a Basic Test
+
+Create your `hello_test.cc` file:
+
+```cpp
+#include <gtest/gtest.h>
+
+TEST(HelloTest, BasicAssertions) {
+  EXPECT_STRNE("hello", "world");
+  EXPECT_EQ(7 * 6, 42);
+}
+```
+
+Build and run per your build system.
+
+- For **CMake**:
+
+```sh
+cmake -S . -B build
+cmake --build build
+cd build
+ctest
+```
+
+- For **Bazel**:
+
+```sh
+bazel test //path/to:my_test
+```
+
+You should see output indicating tests passing.
+
+---
+
+## Best Practices and Tips
+
+- **Use gtest_main/gmock_main** libraries to avoid writing your own `main()` function.
+- To keep your build consistent, prefer building GoogleTest and GoogleMock as part of your project rather than linking against installed versions.
+- Keep C++ standard set to at least C++17 (`set(CMAKE_CXX_STANDARD 17)` in CMake).
+- On Windows, enable `gtest_force_shared_crt` in CMake to avoid runtime library mismatch errors.
+
+---
+
+## Troubleshooting Common Issues
+
+<AccordionGroup title="Troubleshooting Common Setup Issues">
+<Accordion title="Build Fails: Runtime Library Mismatch on Windows">
+This error occurs due to differing runtime linkage settings. To fix, add the following to your `CMakeLists.txt`:
+
+```cmake
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+```
+This enforces dynamic linkage matching your project.
+</Accordion>
+<Accordion title="Tests Not Discovered or Not Running">
+- Make sure you link your test executable against `gtest_main` or `gmock_main`.
+- Confirm that `include(GoogleTest)` and `gtest_discover_tests()` are called in your `CMakeLists.txt`.
+- Ensure tests are defined using `TEST()` or `TEST_F()` macros.
+</Accordion>
+<Accordion title="Linker Errors Related to pthread on Linux">
+If you encounter undefined references related to pthread, add `find_package(Threads REQUIRED)` and link your executable with `${CMAKE_THREAD_LIBS_INIT}`.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## Next Steps & Related Documentation
+
+- Proceed to [Writing Your First Test](../getting-started/first-test-validation/writing-basic-test.md) to learn test authoring.
+- For deeper integration tips, see [Integrating with Build Systems](../guides/integration-and-best-practices/integrating-with-build-systems.md).
+- If using Bazel, consult [Installing with Bazel](../getting-started/prerequisites-installation/installation-bazel.md).
+- Validate your installation with [Quick Validation](../getting-started/first-test-validation/quick-validation.md).
+
+---
+
+## References
+
+- [GoogleTest GitHub Repository](https://github.com/google/googletest)
+- [CMake Documentation](https://cmake.org/documentation/)
+- [GoogleMock Official Guide](https://google.github.io/googletest/gmock_for_dummies.html)
+
+---
+
+Congratulations, you are now ready to build robust, maintainable C++ tests with GoogleTest and GoogleMock integrated into your development workflow.
+
+---
+
+## Additional Example: Minimal CMakeLists.txt for GoogleTest
+
+```cmake
+cmake_minimum_required(VERSION 3.14)
+project(my_project)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+add_executable(
+  hello_test
+  hello_test.cc
+)
+
+target_link_libraries(
+  hello_test
+  GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(hello_test)
+```
+
+Coupled with the `hello_test.cc` example above, this configuration lets you quickly build and run your first tests.
+
+---
+
+## Explanation of provided GoogleTest and GoogleMock main() support
+
+GoogleTest provides `gtest_main` and GoogleMock provides `gmock_main` libraries. Linking against these automatically provides a definition for `main()` that initializes their frameworks and runs all tests.
+
+- Use `gtest_main` when you use only GoogleTest.
+- Use `gmock_main` when tests use GoogleMock's mocking functionality as well.
+
+Refer to `gmock_main.cc` and `gtest_main.cc` source files for their standard main implementations.
+
+---
+
+## Summary
+
+This guide focused specifically on the quick installation and initial integration of GoogleTest and GoogleMock into CMake or Bazel-based projects, enabling users to build and run their first test binaries efficiently.
